[package]
name = "rust1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
box = "0.0.0"
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking"] }

serde = "1.0.188"
serde_json = "1.0.107"

